chore: dockerfile 설정

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,6 @@ services:
       - "3333:3306"
     restart: always
     environment:
-      TZ: UTC
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: moyeomoyeo
       MYSQL_USER: test
@@ -18,3 +17,13 @@ services:
     volumes:
       - ./infra/mysql/data:/var/lib/mysql
       - ./infra/mysql/conf/my.cnf:/etc/mysql/conf.d/my.cnf
+
+  # application
+  moyeomoyeo:
+    image: sju02030/moyeomoyeo
+    restart: always
+    container_name: moyeomoyeo
+    ports:
+      - 8085:8085
+    depends_on:
+      - mysql
