--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: CD with naver cloud platform
 
 on:
   push:
-    branches: [ "main", "deploy-test" ]
+    branches: [ "main" ]
 
 permissions:
   contents: read
@@ -65,7 +65,7 @@ jobs:
             sudo docker pull ${{ secrets.DOCKER_USERNAME }}/moyeomoyeo
             sudo docker-compose up -d
             sudo docker image prune -f
-            
+
       - name: action-slack
         uses: 8398a7/action-slack@v3
         with:
