--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -63,7 +63,7 @@ jobs:
             sudo docker ps
             sudo docker rm -f $(docker ps -qa)
             sudo docker pull ${{ secrets.DOCKER_USERNAME }}/moyeomoyeo
-            sudo cd ./app/docker
+            cd ./app/docker
             sudo docker-compose up -d
             sudo docker image prune -f
 
