--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.0.8'
+    id 'org.springframework.boot' version '3.0.6'
     id 'io.spring.dependency-management' version '1.1.0'
 }
 
@@ -28,10 +28,17 @@ dependencies {
     runtimeOnly 'com.h2database:h2'
     runtimeOnly 'com.mysql:mysql-connector-j'
     annotationProcessor 'org.projectlombok:lombok'
+
+    // Micrometer 의존성 추가
+    implementation 'io.micrometer:micrometer-core:1.10.8'
+    implementation 'io.micrometer:micrometer-registry-prometheus:1.10.8'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'io.micrometer:micrometer-observation:1.10.8'
+
 }
 
-tasks.named('test') {
+test {
     useJUnitPlatform()
 }
 
