--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -1,25 +1,21 @@
 spring:
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
+
+  datasource:
+    url: jdbc:h2:mem:test
+    username: sa
+    password:
+    driver-class-name: org.h2.Driver
+
   jpa:
-    show-sql: true
     hibernate:
       ddl-auto: create
     properties:
       hibernate:
         format_sql: true
-    generate-ddl: true
-    defer-datasource-initialization: true
-  datasource:
-    url:
-    username: sa
-  h2:
-    console:
-      enabled:
-        true
-logging:
-  level:
-    org:
-      hibernate:
-        type:
-          descriptor:
-            sql:
-              BasicBinder: TRACE
+
+logging.level:
+  org.hibernate.SQL: debug
