--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,8 @@ dependencies {
     // Micrometer 의존성 추가
     implementation 'io.micrometer:micrometer-core:1.10.8'
     implementation 'io.micrometer:micrometer-registry-prometheus:1.10.8'
-    implementation 'org.springdoc:springdoc-openapi-ui:1.6.9'
+
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'io.micrometer:micrometer-observation:1.10.8'
