--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,6 +14,9 @@ spring:
         dialect: org.hibernate.dialect.MySQLDialect
         default_batch_fetch_size: 10
 
+    mvc:
+      path match:
+        matching-strategy: ant_path_matcher
 logging.level:
   org.hibernate.SQL: debug
   org.hibernate.type: info
