--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,21 +2,17 @@ server:
   port: 8085
 
 spring:
-  datasource:
-    url: jdbc:mysql://localhost:3333/moyeomoyeo?createDatabaseIfNotExist=true
-    username: test
-    password: test
-    driver-class-name: com.mysql.cj.jdbc.Driver
   profiles:
     active: local
 
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create-drop
     properties:
       hibernate:
         format_sql: true
         dialect: org.hibernate.dialect.MySQLDialect
+        default_batch_fetch_size: 10
 
 logging.level:
   org.hibernate.SQL: debug
