feat: 테스트 환경 구축

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,7 +25,7 @@ logging.level:
   org.hibernate.type: info
   com.jpa: debug
 
-springdoc:
+spring-doc:
   swagger-ui:
     path: /swagger-ui.html
     groups-order: DESC
