--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,6 +1,12 @@
 name: CD with naver cloud platform
 
 on:
+  workflow_dispatch:
+      inputs:
+         tags:
+            description: 'Deploy Tags'
+            required: false
+            type: boolean
   push:
     branches: [ "main" ]
 
