--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.0.6'
-    id 'io.spring.dependency-management' version '1.1.0'
+    id 'org.springframework.boot' version '3.2.6'
+    id 'io.spring.dependency-management' version '1.1.5'
 }
 
 group = 'com.nexters'
@@ -25,6 +25,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'io.hypersistence:hypersistence-utils-hibernate-63:3.7.7'
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'com.h2database:h2'
     runtimeOnly 'com.mysql:mysql-connector-j'
@@ -33,11 +34,11 @@ dependencies {
     // Micrometer 의존성 추가
     implementation 'io.micrometer:micrometer-core:1.10.8'
     implementation 'io.micrometer:micrometer-registry-prometheus:1.10.8'
+    testImplementation 'io.micrometer:micrometer-observation:1.10.8'
 
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'io.micrometer:micrometer-observation:1.10.8'
 
     implementation 'com.google.code.findbugs:jsr305:3.0.2'
 
